Refactor using strategy pattern